--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
 
     <application
         android:name=".app.MyApplication"
@@ -30,18 +32,25 @@
             android:screenOrientation="portrait" />
 
         <service android:name=".pushnotification.RegestrationIntentservice" />
-
         <activity android:name=".view.activity.HomeActivity" />
-
         <service
-            android:name=".view.activity.UploadApplications"
+            android:name=".view.services.UploadApplications"
             android:enabled="true"
             android:exported="true"></service>
-        <receiver android:name=".view.activity.HomeActivity$StartMyServiceAtBootReciever">
+
+
+        //Application reboot detect
+
+        <receiver
+            android:name=".view.services.BootUpReceiver"
+            android:enabled="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
-                <action android:name="YouWillNeverKillMe"></action>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
+        // Application reboot end
     </application>
 
 </manifest>
