--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
 
     <application
@@ -51,6 +52,17 @@
             </intent-filter>
         </receiver>
         // Application reboot end
+
+        //Application Uninstall
+        <receiver android:name =".view.services.UninstallIntentReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <data android:scheme="package"/>
+
+            </intent-filter>
+        </receiver>
+        //Application uninstall
+
     </application>
 
 </manifest>
